syntax="proto3";

package user;
option go_package = "./app/user";

message UpsertUserReq {
    string firebase_id = 1;
    string name = 2; 
    optional string email = 3;
    optional string profile_pic =4;
    optional string platform = 5;
    optional string access_token = 6;
    optional string stripe_id = 8;
}

message UpsertUserRes{
    string message = 1;
    string status = 2;
    UpsertUserDataRes user_detail = 3;
    LoginPlanDetailRes plan_detail = 4;
}

message UpsertUserDataRes{
    string firebase_id = 1;
    string name = 2;
    optional string email = 3;
    optional string profile_pic =4;
    optional string platform = 5;
    optional string access_token = 6;
    optional string stripe_id = 8;
    int64 balance_message = 9;
}

message LoginPlanDetailRes{
    string plan_type = 2;
    int64 max_messages = 3;
}